src/objects/Dettaglio_Riparazione__c.object
<CustomObject>
    <fields>
        <fullName>Address_boutique_templ__c</fullName>
        <formula>IF(OR(
ISNULL(Associate__r.Location__r.Indirizzo__c),
ISBLANK(Associate__r.Location__r.Indirizzo__c),
ISNULL(Associate__r.Location__r.Citta__c),
ISBLANK(Associate__r.Location__r.Citta__c),
ISNULL(Associate__r.Location__r.Nazione__c),
ISBLANK(Associate__r.Location__r.Nazione__c),
ISNULL(Associate__r.Location__r.Codice_Postale__c),
ISBLANK(Associate__r.Location__r.Codice_Postale__c)),&quot;Viale Parco dell&apos;&quot; &amp; &quot;Industria, 5&quot;,
Associate__r.Location__r.Nome_legal_entity__c &amp; BR() &amp; 
Associate__r.Location__r.Indirizzo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affidato_a__c</fullName>
        <label>Affidato a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altra_richiesta_di_riparazione__c</fullName>
        <label>Altra richiesta di riparazione</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Altro_canale_di_acquisto__c</fullName>
        <label>Altro canale di acquisto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altro_negozio_di_acquisto__c</fullName>
        <label>Altro negozio di acquisto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altro_tipo_di_riparazione__c</fullName>
        <label>Altro</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Articolo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Articolo</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Dettagli_Riparazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Advisor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR 3) AND 4</booleanFilter>
            <filterItems>
                <field>Associated__c.Id_Location_Micros__c</field>
                <operation>equals</operation>
                <valueField>$User.Codice_Boutique__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>BC - Associate, BC - Boutique, BC - Boutique SG TW</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notEqual</operation>
                <value>BC - Associate, BC - Boutique, BC - Boutique SG TW</value>
            </filterItems>
            <filterItems>
                <field>Associated__c.IsActive__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Repairs (Client Advisor)</relationshipLabel>
        <relationshipName>Dettagli_Riparazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Boutique__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Riparazione_Customer_Care&apos;, &apos;Customer Care&apos;,Associate__r.Location_Name__c)</formula>
        <label>Boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boutique_di_Acquisto__c</fullName>
        <label>Boutique di Acquisto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canale_di_Acquisto__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Elenco_Negozi</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canale_di_Acquisto__c</fullName>
        <label>Canale di Acquisto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOS</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
                <value>
                    <fullName>Multibrand</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria_Prodotto__c</fullName>
        <label>Categoria Prodotto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Belts</fullName>
                </value>
                <value>
                    <fullName>Blazer</fullName>
                </value>
                <value>
                    <fullName>Candle</fullName>
                </value>
                <value>
                    <fullName>Cushion</fullName>
                </value>
                <value>
                    <fullName>Dresses / Suits</fullName>
                </value>
                <value>
                    <fullName>Free time</fullName>
                </value>
                <value>
                    <fullName>Fur</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
                <value>
                    <fullName>Gold jewelry</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Jewelry creations</fullName>
                </value>
                <value>
                    <fullName>Knitwear</fullName>
                </value>
                <value>
                    <fullName>Leather Jacket</fullName>
                </value>
                <value>
                    <fullName>Objects</fullName>
                </value>
                <value>
                    <fullName>Other (specify in note)</fullName>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Pocket square</fullName>
                </value>
                <value>
                    <fullName>Scarf</fullName>
                </value>
                <value>
                    <fullName>Shoes</fullName>
                </value>
                <value>
                    <fullName>Skirt</fullName>
                </value>
                <value>
                    <fullName>Skullcap</fullName>
                </value>
                <value>
                    <fullName>Small leather goods</fullName>
                </value>
                <value>
                    <fullName>Socks</fullName>
                </value>
                <value>
                    <fullName>Teddies</fullName>
                </value>
                <value>
                    <fullName>Throw</fullName>
                </value>
                <value>
                    <fullName>Ties</fullName>
                </value>
                <value>
                    <fullName>Travelwear</fullName>
                </value>
                <value>
                    <fullName>Trousers</fullName>
                </value>
                <value>
                    <fullName>T-shirt / Shirt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causa_difetto_riscontrato__c</fullName>
        <label>Causa difetto riscontrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prodotto difettato</fullName>
                </value>
                <value>
                    <fullName>Prodotto usurato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_boutique_templ__c</fullName>
        <formula>IF(OR(
ISNULL(Associate__r.Location__r.Indirizzo__c),
ISBLANK(Associate__r.Location__r.Indirizzo__c),
ISNULL(Associate__r.Location__r.Citta__c),
ISBLANK(Associate__r.Location__r.Citta__c),
ISNULL(Associate__r.Location__r.Nazione__c),
ISBLANK(Associate__r.Location__r.Nazione__c),
ISNULL(Associate__r.Location__r.Codice_Postale__c),
ISBLANK(Associate__r.Location__r.Codice_Postale__c)),&quot;06073 Solomeo (Perugia) - IT&quot;,
Associate__r.Location__r.Codice_Postale__c &amp;&apos; &apos;&amp; Associate__r.Location__r.Citta__c &amp; &apos; - &apos;&amp; Associate__r.Location__r.Nazione__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Advisor_Name_templ__c</fullName>
        <formula>Associate__r.Nome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Advisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Advisor_templ__c</fullName>
        <formula>Associate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Dettagli_Riparazioni_o_Modifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colore__c</fullName>
        <formula>Articolo__r.Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consegna_a_Domicilio__c</fullName>
        <label>Consegna a Domicilio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corriere_rientro__c</fullName>
        <label>Corriere rientro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corriere_uscita__c</fullName>
        <label>Corriere uscita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Costo__c</fullName>
        <label>Costo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_Repair__c</fullName>
        <description>Campo per riconoscere la provenienza della riparazione</description>
        <label>Repair Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Conferma__c</fullName>
        <label>Data Conferma</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Consegna__c</fullName>
        <label>Data Consegna</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Pickup__c</fullName>
        <label>Data Pickup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Restituzione__c</fullName>
        <label>Data Restituzione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ritiro__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Ritiro</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Spedizione_da_Solomeo__c</fullName>
        <label>Data Spedizione da Solomeo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_accettazione_richiesta__c</fullName>
        <label>Data accettazione richiesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_affidamento_riparazione__c</fullName>
        <label>Data affidamento riparazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_consegna_effettiva__c</fullName>
        <formula>Riparazione__r.ClosedDate</formula>
        <label>Data consegna effettiva</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_contatto_cliente__c</fullName>
        <label>Data contatto cliente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_riparazione_effettiva__c</fullName>
        <label>Data riparazione effettiva</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_riparazione_prevista__c</fullName>
        <label>Data riparazione prevista</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_riparazione_prevista_modificata__c</fullName>
        <label>Data riparazione prevista modificata</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ritiro_prevista_cliente__c</fullName>
        <label>Data ritiro prevista cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descrizione_Articolo__c</fullName>
        <label>Descrizione</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dettagli_Intervento__c</fullName>
        <label>Dettagli Intervento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimensioni_del_pacco__c</fullName>
        <label>Dimensioni del pacco</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Cliente_input__c</fullName>
        <label>Customer e-mail (input)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Responsabile_Sede__c</fullName>
        <label>Email Responsabile Sede</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_boutique_templ__c</fullName>
        <formula>Associate__r.Location__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fornitore__c</fullName>
        <label>Fornitore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ho_caricato_l_allegato_richiesto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ho caricato l&apos;allegato richiesto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_Associate__c</fullName>
        <description>ID record associate a cui è assegnata la riparazione</description>
        <label>Associate ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <description>ID record location dove è assegnata la riparazione</description>
        <label>Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervento_Richiesto__c</fullName>
        <label>Intervento Richiesto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capo Rovinato Allestimento</fullName>
                </value>
                <value>
                    <fullName>Capo Rovinato Sartoria</fullName>
                </value>
                <value>
                    <fullName>Difetto Buchi</fullName>
                </value>
                <value>
                    <fullName>Difetto Calzata</fullName>
                </value>
                <value>
                    <fullName>Difetto Causato Dal Cliente</fullName>
                </value>
                <value>
                    <fullName>Difetto Colore</fullName>
                </value>
                <value>
                    <fullName>Difetto Cuciture</fullName>
                </value>
                <value>
                    <fullName>Difetto Macchie Impurita</fullName>
                </value>
                <value>
                    <fullName>Difetto Peeling</fullName>
                </value>
                <value>
                    <fullName>Difetto Pelle Rovinata</fullName>
                </value>
                <value>
                    <fullName>Difetto Rifiniture</fullName>
                </value>
                <value>
                    <fullName>Difetto Smagliature</fullName>
                </value>
                <value>
                    <fullName>Difetto Tessuto Strappato</fullName>
                </value>
                <value>
                    <fullName>Difetto Vestibilita</fullName>
                </value>
                <value>
                    <fullName>Difetto Zip/Automatici/Bottoni</fullName>
                </value>
                <value>
                    <fullName>Lfd Lifestyle Danneggiato</fullName>
                </value>
                <value>
                    <fullName>Difetto Tessuto Filato</fullName>
                </value>
                <value>
                    <fullName>Difetto Lavorazione</fullName>
                </value>
                <value>
                    <fullName>Capo Da Ricondizionare</fullName>
                </value>
                <value>
                    <fullName>Motivi Commerciali</fullName>
                </value>
                <value>
                    <fullName>Difetto Bagno Colore</fullName>
                </value>
                <value>
                    <fullName>Riparazione Di Cortesia</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Danneggiato</fullName>
                </value>
                <value>
                    <fullName>Neverending Stories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modello__c</fullName>
        <formula>Articolo__r.Modello__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modello</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivazione_Insoddisfazione__c</fullName>
        <label>Motivazione Insoddisfazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tempistiche</fullName>
                </value>
                <value>
                    <fullName>Capo non riparato</fullName>
                </value>
                <value>
                    <fullName>Riparazione non soddisfacente</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                    <label>Altro (specifica in note)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_boutique_templ__c</fullName>
        <formula>IF(OR(
ISNULL(Associate__r.Location__r.Indirizzo__c),
ISBLANK(Associate__r.Location__r.Indirizzo__c),
ISNULL(Associate__r.Location__r.Citta__c),
ISBLANK(Associate__r.Location__r.Citta__c),
ISNULL(Associate__r.Location__r.Nazione__c),
ISBLANK(Associate__r.Location__r.Nazione__c),
ISNULL(Associate__r.Location__r.Codice_Postale__c),
ISBLANK(Associate__r.Location__r.Codice_Postale__c)),&quot;Brunello Cucinelli&quot;,
&apos;Boutique &apos;&amp; Associate__r.Location__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota_di_rifiuto_richiesta_riparazione__c</fullName>
        <label>Nota di rifiuto richiesta riparazione</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Avvenuta_Riconsegna__c</fullName>
        <label>Note Avvenuta Riconsegna</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soddisfatto</fullName>
                    <label>😀 Soddisfatto</label>
                </value>
                <value>
                    <fullName>Parzialmente soddisfatto</fullName>
                    <label>🙂 Parzialmente soddisfatto</label>
                </value>
                <value>
                    <fullName>Neutro</fullName>
                    <label>😐 Indifferente</label>
                </value>
                <value>
                    <fullName>Non soddisfatto</fullName>
                    <label>🙁 Non soddisfatto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_Controllo_Qualit__c</fullName>
        <label>Note Controllo Qualità</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_insoddisfazione__c</fullName>
        <label>Note insoddisfazione</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_sollecito__c</fullName>
        <label>Note sollecito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_su_tempistiche_di_riparazione__c</fullName>
        <label>Note su tempistiche di riparazione</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Numero_Autorizzazione_Sede__c</fullName>
        <label>Numero Autorizzazione Sede</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Scontrino__c</fullName>
        <label>Numero Scontrino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_boutique_templ__c</fullName>
        <formula>Associate__r.Location__r.Telefono__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone boutique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Number__c</fullName>
        <label>Pickup Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto_caricato_a_stock__c</fullName>
        <label>Prodotto caricato a stock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prodotto_riparabile__c</fullName>
        <label>Prodotto riparabile?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prodotto_riparato__c</fullName>
        <defaultValue>&quot;To be repaired&quot;</defaultValue>
        <label>Prodotto riparato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Riparato</fullName>
                </value>
                <value>
                    <fullName>Non Riparato</fullName>
                </value>
                <value>
                    <fullName>Parzialmente Riparato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Belts</fullName>
                </value>
                <value>
                    <fullName>Blazer</fullName>
                </value>
                <value>
                    <fullName>Candle</fullName>
                </value>
                <value>
                    <fullName>Cushion</fullName>
                </value>
                <value>
                    <fullName>Dresses / Suits</fullName>
                </value>
                <value>
                    <fullName>Free time</fullName>
                </value>
                <value>
                    <fullName>Fur</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
                <value>
                    <fullName>Gold jewelry</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Jewelry creations</fullName>
                </value>
                <value>
                    <fullName>Knitwear</fullName>
                </value>
                <value>
                    <fullName>Leather Jacket</fullName>
                </value>
                <value>
                    <fullName>Objects</fullName>
                </value>
                <value>
                    <fullName>Other (specify in note)</fullName>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Pocket square</fullName>
                </value>
                <value>
                    <fullName>Scarf</fullName>
                </value>
                <value>
                    <fullName>Shoes</fullName>
                </value>
                <value>
                    <fullName>Skirt</fullName>
                </value>
                <value>
                    <fullName>Skullcap</fullName>
                </value>
                <value>
                    <fullName>Small leather goods</fullName>
                </value>
                <value>
                    <fullName>Socks</fullName>
                </value>
                <value>
                    <fullName>Teddies</fullName>
                </value>
                <value>
                    <fullName>Throw</fullName>
                </value>
                <value>
                    <fullName>Ties</fullName>
                </value>
                <value>
                    <fullName>Travelwear</fullName>
                </value>
                <value>
                    <fullName>Trousers</fullName>
                </value>
                <value>
                    <fullName>T-shirt / Shirt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Articolo__r.Sesso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Client_Name__c</fullName>
        <formula>IF(NOT(ISNULL(Client__r.FirstName)),Client__r.FirstName+&apos; &apos;+Client__r.LastName,Client__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repair Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Start_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repair Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>